# AoC

./: .gitignore  CMakeLists.txt
cpp_skeleton/: CMakeLists.txt
day1/: CMakeLists.txt  main.cpp
day2/: CMakeLists.txt  part1.cpp  part2.cpp  part2_answer
day3/: CMakeLists.txt  answer_part1  part1.cpp  part2.cpp
day4/: CMakeLists.txt  input  part1.cpp  part2.cpp
day5/: CMakeLists.txt  answer_example_part1  part1.cpp
src/: CMakeLists.txt
src/day1/: CMakeLists.txt  main.cpp
src/day2/: CMakeLists.txt  part1.cpp  part1_answer
src/day3/: CMakeLists.txt  part2.cpp
src/day4/: CMakeLists.txt
src/day5/: CMakeLists.txt  answer_part1  answer_part2  part1.cpp  part2.cpp
src/day6/: CMakeLists.txt  answer_part1  input  part1.cpp  part2.cpp
src/day8/: CMakeLists.txt  part1.cpp  part2.cpp  util.cpp  util.h
src/day9/: CMakeLists.txt  answer_part1  part1.cpp  part2.cpp  util.cpp  util.h
